--- a/newtab.html
+++ b/newtab.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zen Task</title>
 </head>
+
 <body>
+  <canvas id="background-canvas"
+    style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; pointer-events: none;"></canvas>
   <div id="app"></div>
   <script type="module" src="/src/newtab/index.ts"></script>
 </body>
+
 </html>
